--- a/ManageIT/Views/ADMvc/Index.cshtml
+++ b/ManageIT/Views/ADMvc/Index.cshtml
@@ -3,5 +3,70 @@
     ViewBag.Title = "Index";
 }
 
-<h2>ADMvc view</h2>
+<div class="wrapper">
+    <!-- Sidebar -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>ManageIT</h3>
+        </div>
+
+        <ul class="list-unstyled components">            
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">New Users</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a href="#">New users</a>
+                    </li>
+                    <li>
+                        <a href="#">Locked users</a>
+                    </li>
+                    <li>
+                        <a href="#">Manage users</a>
+                    </li>
+                    <li>
+                        <a href="#">Manage computers</a>
+                    </li>
+                    <li>
+                        <a href="#">Manage system</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Locked users</a>
+            </li>
+            <li>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Manage users</a>
+                <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <li>
+                        <a href="#">Page 1</a>
+                    </li>
+                    <li>
+                        <a href="#">Page 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Page 3</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Manage computers</a>
+            </li>
+            <li>
+                <a href="#">Manage system</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="content">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>
+                    <span>Toggle Sidebar</span>
+                </button>
+
+            </div>
+        </nav>
+    </div>
+</div>
 
