--- a/ManageIT/Views/ADMvc/Dashboard.cshtml
+++ b/ManageIT/Views/ADMvc/Dashboard.cshtml
@@ -49,7 +49,7 @@ The above copyright notice and this permission notice shall be included in all c
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="@Url.Action("newuserlist", "ADMvc")">
+                        <a class="nav-link" href="@Url.Action("Newuserlist", "ADMvc")">
                             עובדים חדשים
                             <i class="material-icons">person</i>
                         </a>
@@ -61,22 +61,23 @@ The above copyright notice and this permission notice shall be included in all c
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="@Url.Action(" usermanagement", "ADMvc" )">
+                        <a class="nav-link" href="@Url.Action("Usermanagement", "ADMvc" )">
                             ניהול משתמשים
                             <i class="material-icons">person</i>
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="@Url.Action(" compmanagement", "ADMvc" )">
+                        <a class="nav-link" href="@Url.Action("Compmanagement", "ADMvc" )">
                             ניהול מחשבים
                             <i class="material-icons">computer</i>
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="./map.html">
+                        <a class="nav-link" href="@Url.Action("Systemmanagement", "ADMvc" )">
+                            ניהול מחשבים
                             <i class="material-icons">settings</i>
-                            <p>ניהול מערכת</p>
                         </a>
+                    </li>
                 </ul>
             </div>
         </div>
