--- a/ManageIT/Views/ADMvc/usermanagement.cshtml
+++ b/ManageIT/Views/ADMvc/usermanagement.cshtml
@@ -43,40 +43,41 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="sidebar-wrapper">
                 <ul class="nav">
                     <li class="nav-item ">
-                        <a class="nav-link" href="@Url.Action(" Dashboard", "ADMvc" )">
+                        <a class="nav-link" href="@Url.Action("Dashboard", "ADMvc" )">
                             מסך ראשי
                             <i class="material-icons">dashboard</i>
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="@Url.Action(" newuserlist", "ADMvc" )">
+                        <a class="nav-link" href="@Url.Action("Newuserlist", "ADMvc" )">
                             עובדים חדשים
                             <i class="material-icons">person</i>
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="@Url.Action(" lockeduserslist", "ADMvc" )">
+                        <a class="nav-link" href="@Url.Action("Lockeduserslist", "ADMvc" )">
                             משתמשים נעולים
                             <i class="material-icons">lock</i>
                         </a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="@Url.Action(" usermanagement", "ADMvc" )">
+                        <a class="nav-link" href="@Url.Action("Usermanagement", "ADMvc" )">
                             ניהול משתמשים
                             <i class="material-icons">person</i>
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="@Url.Action(" compmanagement", "ADMvc" )">
+                        <a class="nav-link" href="@Url.Action("Compmanagement", "ADMvc" )">
                             ניהול מחשבים
                             <i class="material-icons">computer</i>
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="./map.html">
+                        <a class="nav-link" href="@Url.Action("Systemmanagement", "ADMvc" )">
+                            ניהול מחשבים
                             <i class="material-icons">settings</i>
-                            <p>ניהול מערכת</p>
                         </a>
+                    </li>
                 </ul>
             </div>
         </div>
