--- a/ManageIT/Views/ADMvc/compmanagement.cshtml
+++ b/ManageIT/Views/ADMvc/compmanagement.cshtml
@@ -79,7 +79,7 @@ The above copyright notice and this permission notice shall be included in all c
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="@Url.Action("Systemmanagement", "ADMvc" )">
-                            ניהול מחשבים
+                            ניהול מערכת
                             <i class="material-icons">settings</i>
                         </a>
                     </li>
